# ingest

./: .gitignore  AGENTS.md  README.md  config.example.toml  pyproject.toml
docs/: architecture.md  metrics.md  rename-to-ingest.md
ingest/: activities.py  app_data.py  auth_state.py  cli.py  config.py  context.py  prompts.py  sync_scope.py  ui.py
ingest/plugins/: __init__.py  contract.py  hevy.py  suunto.py  vitalsync.py  withings.py
ingest/sources/: __init__.py  hevy.py  suunto.py  vitalsync.py  withings.py
life_log_sync/: __init__.py  activities.py  app_data.py  cli.py  config.py  context.py
life_log_sync/sources/: strava.py  withings.py
scripts/: strava_sync.py
tests/: test_activities.py  test_app_data.py  test_cli.py  test_config.py  test_context.py  test_hevy.py  test_plugins.py  test_sources.py  test_strava.py  test_suunto.py  test_ui.py  test_vitalsync.py  test_withings.py
