[project]
name = "life-log-sync"
version = "0.1.0"
description = "Sync personal life-log telemetry into an application data directory."
authors = [{ name = "iomz" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests>=2.32,<3",
]

[project.scripts]
life-log-sync = "life_log_sync.cli:main"

[tool.poetry]
packages = [{ include = "life_log_sync" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
